--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Cabeçalho -->
     <header>
         <h1> Matheus C. Souza </h1>
-        <p>Desenvolvedor Full Stack - Python</p>
+        <p>Analista de Dados</p>
     <!-- Nav -->
         <nav>
             <ul>
@@ -30,29 +30,15 @@
         <!-- Tecnologias -->
         <section>
             <h2>Tecnologias</h2>
-            <p>Python - Back-end</p>
-            <p>HTML/CSS</p>
-            <p>Java Script</p>
-            <p>SQL/MYSQL/PostgreSQL e NoSQL</p>
+            <p>Python | SQL | Locker</p>
+            <p>PySpark | Google Sheets | </p>
         </section>
         <!-- Projetos -->
         <section>
             <h2>Projetos recentes</h2>
             <article>
-                <h3>E-Commerce</h3>
-                <p>Loja online com produtos, carrinho e checkout.</p>
-                <a href="#">Ver Projeto</a>
-            </article>
-
-            <article>
-                <h3>To-Do List</h3>
-                <p>Plataforma para gerenciar tarefas, com backend.</p>
-                <a href="#">Ver Projeto</a>
-            </article>
-
-            <article>
-                <h3>App de clima</h3>
-                <p>Aplicação que mostra a previsão do tempo usando uma API.</p>
+                <h3>Em desenvolvimento</h3>
+                <p>---</p>
                 <a href="#">Ver Projeto</a>
             </article>
         </section>
@@ -64,7 +50,7 @@
         <p> </p>
         <a href="#">LinkedIn</a>
         <a> | </a>
-        <a href="#">GitHub</a>
+        <a href="https://github.com/htamdev">GitHub</a>
     </footer>
 </body>
 </html>
